// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Force status component Renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    currentStatus="DO_NOT_DELIVER"
    disabled={true}
    forceTrafficStatus="DELIVER"
    modelPath="testModel"
    patientId="123"
    setDeliveryStatusRequest={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <styled.div>
          <styled.div>
            <styled.span>
              <Unknown
                disabled={true}
                modelPath=".status"
                status="DELIVER"
              />
            </styled.span>
          </styled.div>
          <Unknown
            component={[Function]}
            maxLength={255}
            model=".comment"
            placeholder="Force status comments"
          />
        </styled.div>,
        <styled.div>
          <Unknown
            noIcon={true}
            status="DELIVER"
          />
          <div>
            <Unknown
              component={[Function]}
              disabled={true}
              label="Force Status"
              model="stripDelivery.forceTrafficStatus"
              type="submit"
            />
          </div>
        </styled.div>,
      ],
      "model": "testModel",
      "onSubmit": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <styled.div>
              <styled.span>
                <Unknown
                  disabled={true}
                  modelPath=".status"
                  status="DELIVER"
                />
              </styled.span>
            </styled.div>,
            <Unknown
              component={[Function]}
              maxLength={255}
              model=".comment"
              placeholder="Force status comments"
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <styled.span>
                  <Unknown
                    disabled={true}
                    modelPath=".status"
                    status="DELIVER"
                  />
                </styled.span>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "ForceStatusButtonContainer-DELIVER",
                "nodeType": "class",
                "props": Object {
                  "children": <Unknown
                    disabled={true}
                    modelPath=".status"
                    status="DELIVER"
                  />,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": "ForceStatusButton-DELIVER",
                  "nodeType": "function",
                  "props": Object {
                    "disabled": true,
                    "modelPath": ".status",
                    "status": "DELIVER",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "function",
            "props": Object {
              "component": [Function],
              "maxLength": 255,
              "model": ".comment",
              "placeholder": "Force status comments",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Unknown
              noIcon={true}
              status="DELIVER"
            />,
            <div>
              <Unknown
                component={[Function]}
                disabled={true}
                label="Force Status"
                model="stripDelivery.forceTrafficStatus"
                type="submit"
              />
            </div>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "function",
            "props": Object {
              "noIcon": true,
              "status": "DELIVER",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": <Unknown
                component={[Function]}
                disabled={true}
                label="Force Status"
                model="stripDelivery.forceTrafficStatus"
                type="submit"
              />,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "function",
              "props": Object {
                "component": [Function],
                "disabled": true,
                "label": "Force Status",
                "model": "stripDelivery.forceTrafficStatus",
                "type": "submit",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <styled.div>
            <styled.div>
              <styled.span>
                <Unknown
                  disabled={true}
                  modelPath=".status"
                  status="DELIVER"
                />
              </styled.span>
            </styled.div>
            <Unknown
              component={[Function]}
              maxLength={255}
              model=".comment"
              placeholder="Force status comments"
            />
          </styled.div>,
          <styled.div>
            <Unknown
              noIcon={true}
              status="DELIVER"
            />
            <div>
              <Unknown
                component={[Function]}
                disabled={true}
                label="Force Status"
                model="stripDelivery.forceTrafficStatus"
                type="submit"
              />
            </div>
          </styled.div>,
        ],
        "model": "testModel",
        "onSubmit": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <styled.div>
                <styled.span>
                  <Unknown
                    disabled={true}
                    modelPath=".status"
                    status="DELIVER"
                  />
                </styled.span>
              </styled.div>,
              <Unknown
                component={[Function]}
                maxLength={255}
                model=".comment"
                placeholder="Force status comments"
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <styled.span>
                    <Unknown
                      disabled={true}
                      modelPath=".status"
                      status="DELIVER"
                    />
                  </styled.span>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "ForceStatusButtonContainer-DELIVER",
                  "nodeType": "class",
                  "props": Object {
                    "children": <Unknown
                      disabled={true}
                      modelPath=".status"
                      status="DELIVER"
                    />,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": "ForceStatusButton-DELIVER",
                    "nodeType": "function",
                    "props": Object {
                      "disabled": true,
                      "modelPath": ".status",
                      "status": "DELIVER",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "function",
              "props": Object {
                "component": [Function],
                "maxLength": 255,
                "model": ".comment",
                "placeholder": "Force status comments",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Unknown
                noIcon={true}
                status="DELIVER"
              />,
              <div>
                <Unknown
                  component={[Function]}
                  disabled={true}
                  label="Force Status"
                  model="stripDelivery.forceTrafficStatus"
                  type="submit"
                />
              </div>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "function",
              "props": Object {
                "noIcon": true,
                "status": "DELIVER",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": <Unknown
                  component={[Function]}
                  disabled={true}
                  label="Force Status"
                  model="stripDelivery.forceTrafficStatus"
                  type="submit"
                />,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "function",
                "props": Object {
                  "component": [Function],
                  "disabled": true,
                  "label": "Force Status",
                  "model": "stripDelivery.forceTrafficStatus",
                  "type": "submit",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Force status component Renders with default props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    forceTrafficStatus="DELIVER"
    modelPath="testModel"
    patientId="123"
    setDeliveryStatusRequest={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <styled.div>
          <styled.div>
            <styled.span>
              <Unknown
                disabled={true}
                modelPath=".status"
                status="DELIVER"
              />
            </styled.span>
            <styled.span>
              <Unknown
                disabled={false}
                modelPath=".status"
                status="DO_NOT_DELIVER"
              />
            </styled.span>
          </styled.div>
          <Unknown
            component={[Function]}
            maxLength={255}
            model=".comment"
            placeholder="Force status comments"
          />
        </styled.div>,
        <styled.div>
          <Unknown
            noIcon={true}
            status="DELIVER"
          />
          <div>
            <Unknown
              component={[Function]}
              disabled={false}
              label="Force Status"
              model="stripDelivery.forceTrafficStatus"
              type="submit"
            />
          </div>
        </styled.div>,
      ],
      "model": "testModel",
      "onSubmit": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <styled.div>
              <styled.span>
                <Unknown
                  disabled={true}
                  modelPath=".status"
                  status="DELIVER"
                />
              </styled.span>
              <styled.span>
                <Unknown
                  disabled={false}
                  modelPath=".status"
                  status="DO_NOT_DELIVER"
                />
              </styled.span>
            </styled.div>,
            <Unknown
              component={[Function]}
              maxLength={255}
              model=".comment"
              placeholder="Force status comments"
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <styled.span>
                  <Unknown
                    disabled={true}
                    modelPath=".status"
                    status="DELIVER"
                  />
                </styled.span>,
                <styled.span>
                  <Unknown
                    disabled={false}
                    modelPath=".status"
                    status="DO_NOT_DELIVER"
                  />
                </styled.span>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "ForceStatusButtonContainer-DELIVER",
                "nodeType": "class",
                "props": Object {
                  "children": <Unknown
                    disabled={true}
                    modelPath=".status"
                    status="DELIVER"
                  />,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": "ForceStatusButton-DELIVER",
                  "nodeType": "function",
                  "props": Object {
                    "disabled": true,
                    "modelPath": ".status",
                    "status": "DELIVER",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "ForceStatusButtonContainer-DO_NOT_DELIVER",
                "nodeType": "class",
                "props": Object {
                  "children": <Unknown
                    disabled={false}
                    modelPath=".status"
                    status="DO_NOT_DELIVER"
                  />,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": "ForceStatusButton-DO_NOT_DELIVER",
                  "nodeType": "function",
                  "props": Object {
                    "disabled": false,
                    "modelPath": ".status",
                    "status": "DO_NOT_DELIVER",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "function",
            "props": Object {
              "component": [Function],
              "maxLength": 255,
              "model": ".comment",
              "placeholder": "Force status comments",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Unknown
              noIcon={true}
              status="DELIVER"
            />,
            <div>
              <Unknown
                component={[Function]}
                disabled={false}
                label="Force Status"
                model="stripDelivery.forceTrafficStatus"
                type="submit"
              />
            </div>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "function",
            "props": Object {
              "noIcon": true,
              "status": "DELIVER",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": <Unknown
                component={[Function]}
                disabled={false}
                label="Force Status"
                model="stripDelivery.forceTrafficStatus"
                type="submit"
              />,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "function",
              "props": Object {
                "component": [Function],
                "disabled": false,
                "label": "Force Status",
                "model": "stripDelivery.forceTrafficStatus",
                "type": "submit",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <styled.div>
            <styled.div>
              <styled.span>
                <Unknown
                  disabled={true}
                  modelPath=".status"
                  status="DELIVER"
                />
              </styled.span>
              <styled.span>
                <Unknown
                  disabled={false}
                  modelPath=".status"
                  status="DO_NOT_DELIVER"
                />
              </styled.span>
            </styled.div>
            <Unknown
              component={[Function]}
              maxLength={255}
              model=".comment"
              placeholder="Force status comments"
            />
          </styled.div>,
          <styled.div>
            <Unknown
              noIcon={true}
              status="DELIVER"
            />
            <div>
              <Unknown
                component={[Function]}
                disabled={false}
                label="Force Status"
                model="stripDelivery.forceTrafficStatus"
                type="submit"
              />
            </div>
          </styled.div>,
        ],
        "model": "testModel",
        "onSubmit": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <styled.div>
                <styled.span>
                  <Unknown
                    disabled={true}
                    modelPath=".status"
                    status="DELIVER"
                  />
                </styled.span>
                <styled.span>
                  <Unknown
                    disabled={false}
                    modelPath=".status"
                    status="DO_NOT_DELIVER"
                  />
                </styled.span>
              </styled.div>,
              <Unknown
                component={[Function]}
                maxLength={255}
                model=".comment"
                placeholder="Force status comments"
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <styled.span>
                    <Unknown
                      disabled={true}
                      modelPath=".status"
                      status="DELIVER"
                    />
                  </styled.span>,
                  <styled.span>
                    <Unknown
                      disabled={false}
                      modelPath=".status"
                      status="DO_NOT_DELIVER"
                    />
                  </styled.span>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "ForceStatusButtonContainer-DELIVER",
                  "nodeType": "class",
                  "props": Object {
                    "children": <Unknown
                      disabled={true}
                      modelPath=".status"
                      status="DELIVER"
                    />,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": "ForceStatusButton-DELIVER",
                    "nodeType": "function",
                    "props": Object {
                      "disabled": true,
                      "modelPath": ".status",
                      "status": "DELIVER",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": "ForceStatusButtonContainer-DO_NOT_DELIVER",
                  "nodeType": "class",
                  "props": Object {
                    "children": <Unknown
                      disabled={false}
                      modelPath=".status"
                      status="DO_NOT_DELIVER"
                    />,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": "ForceStatusButton-DO_NOT_DELIVER",
                    "nodeType": "function",
                    "props": Object {
                      "disabled": false,
                      "modelPath": ".status",
                      "status": "DO_NOT_DELIVER",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "function",
              "props": Object {
                "component": [Function],
                "maxLength": 255,
                "model": ".comment",
                "placeholder": "Force status comments",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Unknown
                noIcon={true}
                status="DELIVER"
              />,
              <div>
                <Unknown
                  component={[Function]}
                  disabled={false}
                  label="Force Status"
                  model="stripDelivery.forceTrafficStatus"
                  type="submit"
                />
              </div>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "function",
              "props": Object {
                "noIcon": true,
                "status": "DELIVER",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": <Unknown
                  component={[Function]}
                  disabled={false}
                  label="Force Status"
                  model="stripDelivery.forceTrafficStatus"
                  type="submit"
                />,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "function",
                "props": Object {
                  "component": [Function],
                  "disabled": false,
                  "label": "Force Status",
                  "model": "stripDelivery.forceTrafficStatus",
                  "type": "submit",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
